--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 						<img src="assets/img/logo.png">
 					</div>
 					<div class="rightMenu">
-						<a href="##">HOMEPAGE</a>
-						<a href="##">STYLE DEMO</a>
-						<a href="##">FULL WIDTH</a>
-						<a href="##">PORTFOLIO</a>
-						<a href="##">GALLERY</a>
-						<a href="##">DROPDOWN</a>
+                        <ul>
+                            <li><a href="##" class="first-child">HOMEPAGE</a></li>
+                            <li><a href="##">STYLE DEMO</a></li>
+                            <li><a href="##">FULL WIDTH</a></li>
+                            <li><a href="##">PORTFOLIO</a></li>
+                            <li><a href="##">GALLERY</a></li>
+                            <li><a href="##">DROPDOWN</a></li>
+                        </ul>
 					</div>
 					<div class="clear"></div>
 				</nav>
@@ -166,7 +168,7 @@
 					</form>
 					<ul class="socialMedia">
 						<li>
-							<a class="link" href="##" ><i class="fab fa-linkedin-in"></i></a>
+							<a class="linkedIn" href="##" ><i class="fab fa-linkedin-in"></i></a>
 						</li>
 						<li>
 							<a class="tw" href="##" ><i class="fab fa-twitter"></i></a>
